--- a/exerciciosJS/listaExGithub/ex7A.html
+++ b/exerciciosJS/listaExGithub/ex7A.html
@@ -14,6 +14,7 @@
         <br>
         <input type="button" value="Exibir" id="btnExibir">
         <input type="button" value="Limpar" id="btnLimpar">
+        <p id="nome-completo"></p>
     </main>
     <script>exercicioSeteA()</script>
 </body>
