Exercício esquadro finalizado.
Fora o término do esquadro, houve um pequeno ajuste na declaração da variável "pincel", presente no arquivo ex_cabeca_creeper

--- a/ex_cabeca_creeper.html
+++ b/ex_cabeca_creeper.html
@@ -10,7 +10,7 @@
     <canvas id="tela" width="600px" height="400px"></canvas>
     <script>
         const tela = document.getElementById("tela");
-        pincel = tela.getContext("2d");
+        let pincel = tela.getContext("2d");
         
         //cabeça
         pincel.fillStyle = "darkgreen";
