--- a/ex_esquadro.html
+++ b/ex_esquadro.html
@@ -10,12 +10,23 @@
     <canvas width="600px" height="400px"></canvas>
     <script>
         const tela = document.getElementsByTagName("canvas");
-        pincel = tela.getContexto("2d");
+        let pincel = tela[0].getContext("2d");
 
         //retangunlo preto
         pincel.beginPath();
-        pincel.moveTo(100,0);
-        pincel.lineTo(100,400);
+        pincel.moveTo(50,50);
+        pincel.lineTo(50,400);
+        pincel.lineTo(400,400);
+        pincel.fillStyle = "black";
+        pincel.fill();
+
+        //retangulo branco
+        pincel.beginPath();
+        pincel.moveTo(100,175);
+        pincel.lineTo(100,350);
+        pincel.lineTo(275,350);
+        pincel.fillStyle="white";
+        pincel.fill();
         
     </script>
     
